# LogosLang

./: .gitignore  CLAUDE.md  DESIGN.md  NOTICE  README.md  TRADEMARK.md  V1PLAN.md  language_sketch.logos
.claude/skills/faithfulness-audit/: SKILL.md
.github/scripts/: docs-check.sh  docs-check.test.sh  new-doc.sh  new-version.sh
.github/workflows/: docs.yml  release.yml  roadmap-sync.yml
seed/: Cargo.toml
seed/examples/: answer.logos  logos_reflection.logos  logos_returning_fn.logos  metalogosfn.logos  metatypefn.logos  type_reflection.logos  type_returning_fn.logos
seed/src/: compile.rs  core.rs  id_context.rs  lib.rs  main.rs  parse.rs  reflect.rs  regex_splitting.rs  regex_trie.rs  report.rs  run.rs  store.rs
seed/src/identities/: add.rs  and.rs  array.rs  assign.rs  bool.rs  callable.rs  cmp.rs  comment.rs  convert.rs  declare.rs  divide.rs  drop_model.rs  dyad.rs  eq.rs  fn.rs  for.rs  ge.rs  gt.rs  i32.rs  id_context.rs  if.rs  instance.rs  le.rs  logos.rs  lt.rs  meta.rs  minus.rs  mod.rs  modulo.rs  mul.rs  ne.rs  not.rs  numtype.rs  ops.rs  or.rs  paren.rs  plus.rs  pointer.rs  rational.rs  return.rs  (+8 more)
seed/src/lex/: mod.rs  regex_splitting.rs  trie.rs
seed/tests/: cli.rs
seed/tests/fixtures/: comptime_sees_committed_state.logos  declared_logos_after_code.logos  heap.logos  logos_name.logos  metalogos_arm.logos  metatype_type_arm.logos  type_name.logos  typed_decl_after_code.logos  unknown_name.logos
