[package]
name = "seed"
version = "0.1.0"
edition = "2021"
description = "The Logos bootstrap seed: node model, lexer, parser, interpreter, and Cranelift backend."
authors = ["Thobias Melfjord Knudsen <thobknu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ThobiasKnudsen/LogosLang"

[dependencies]
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-jit = "0.133.1"
cranelift-module = "0.133.1"
cranelift-native = "0.133.1"
regex = "1"
